# deep_learning

./: .gitignore  README.md  eda.ipynb  eda_deep.ipynb  patchtst.ipynb  patchtst_final_training.ipynb  patchtst_patch_size_experiments.ipynb  prophet_all_normalized.ipynb  prophet_all_normalized_256_96.ipynb  pyproject.toml  xgboost.ipynb
archive/: prophet.ipynb
checkpoints/patchtst_patch16_final/: patchtst_patch16_best.pt
checkpoints/patchtst_patch8_final/: patchtst_patch8_best.pt
results/: patchtst_patch16_final.csv  patchtst_patch8_final.csv  patchtst_patch_size_results.csv
